[package]
name = "gfx-memory"
version = "0.1.0"
authors = ["omni-viral <scareaangel@gmail.com>"]
description = "Memory management for gfx-hal"
repository = "https://github.com/gfx-rs/gfx-memory"
license = "MIT/Apache-2.0"

[features]
checks = []

[dependencies]
gfx-hal = { version = "0.1.0", git = "https://github.com/gfx-rs/gfx", rev = "b3d362f55" }
relevant = "0.1"
